# sistema-biblioteca-django

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requeriments.txt
biblioteca_django/: asgi.py  settings.py  urls.py  wsgi.py
livro/: admin.py  models.py  urls.py  views.py
livro/migrations/: 0001_initial.py  0002_alter_livros_options.py  0003_emprestimo.py  0004_emprestimo_devolvido_livros_disponivel.py  0005_alter_livros_disponivel.py
livro/templates/: apagado_sucesso.html  apagar.html  buscar.html  detalhes_livro.html  emprestimo.html  emprestimo_sucesso.html  estoque.html  historico.html  livro_form.html  livro_sucesso.html
static/global/css/: style.css
static/livro/css/: base.css  buscar.css  detalhes_livro.css  style.css
static/usuarios/css/: base.css  cadastro.css  login.css  style.css
templates/: base.html  home.html  usuariobase.html
usuarios/: admin.py  middleware.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py
usuarios/templates/: base.html  cadastro.html  login.html
