[tool.poetry]
name = "biblioteca-django"
version = "0.1.0"
description = ""
authors = ["Kynderman Baraldi <kynderman@gmail.com>"]
readme = "README.md"
packages = [{include = "biblioteca_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
